--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,3 +1,6 @@
 @import './container/container';
+@import './button/button';
 @import './main-header/main-header';
 @import './main-banner/main-banner';
+@import './modal/modal';
+@import './callback/callback';
