--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>Uni-folio - Резюме верстальщика</title>
+    <title>Сайт вебразработчика и верстальщика</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
     <script defer="defer" src="js/bundle.js"></script>
