--- a/src/components/main-banner/main-banner.hbs
+++ b/src/components/main-banner/main-banner.hbs
@@ -2,7 +2,10 @@
     <div class="container main-banner__container">
         <div class="main-banner__content">
             <div class="main-banner__slogan">привет!<br>меня зовут <span class="blue">иванов иван</span></div>
-            <h1 class="main-banner__headline">Я талантливый <span class="blue">веб-разработчик</span><sup>1</sup> и <span class="blue">верстальщик</span><sup>2</sup></h1>
+            <h1 class="h1 main-banner__headline">Я талантливый <span class="blue">веб-разработчик</span><sup>1</sup> и <span class="blue">верстальщик</span><sup>2</sup></h1>
+            <a href="#about" class="button main-banner__button">
+                <span class="main-banner__button-title">это моё всё...</span>
+            </a>
         </div>
     </div>
 </div>
