--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,26 +1,30 @@
 .button {
-  color: #ffffff;
-  font-family: 'Cuprum', sans-serif;
+  font-family: 'Helvetica-6-Medium', sans-serif;
   font-size: 18px;
-  font-weight: 400;
+  font-weight: 500;
+  color: #121212;
   text-transform: uppercase;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   min-height: 38px;
   outline: none;
-  border: 0;
   cursor: pointer;
   text-decoration: none;
   transition: $delay;
-  background-color: #43aa26;
-  box-shadow: inset 0 -3px 0 #2c8a12;
+  box-shadow: 3px 4px 8px rgba(0, 0, 0, 0.35);
+  border-radius: 10px;
+  border: 2px solid #121212;
+  background-color: #ffffff;
 
   &:hover {
-    background: darken(#43aa26,15%);
+    margin-top: 1px;
+    //background-color: darken(#ffffff, 10%);
+    box-shadow: 0 0 0;
   }
 
   &__icon{
     margin-right: 13px;
   }
 }
+
