--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,6 +1,7 @@
 @import './container/container';
 @import './button/button';
-@import './main-header/main-header';
 @import './main-banner/main-banner';
-@import './modal/modal';
-@import './callback/callback';
+@import './about/about';
+@import './one-work/one-work';
+@import './all-works/all-works';
+@import './main-footer/main-footer';
