--- a/src/components/all-works/all-works.hbs
+++ b/src/components/all-works/all-works.hbs
@@ -4,22 +4,37 @@
         <div class="h2_subtitle all-works__description">нажмите на рисунок чтоб узнать подробнее</div>
         <div class="all-works__list">
             <li class="all-works__item">
-                <div class="all-works__item-img">
-                    <img src="images/project1.png" alt="">
-                </div>
-                <div class="all-works__item-title">название проекта 1</div>
+                <a href="#" class="all-works__item-link">
+                    <div  class="all-works__item-content">
+                        <img src="images/project1.png" alt="">
+                        <div class="all-works__item-layer">
+                            <img src="images/hoverlink.png" alt="">
+                        </div>
+                    </div>
+                    <div class="all-works__item-title">название проекта 1</div>
+                </a>
             </li>
             <li class="all-works__item">
-                <div class="all-works__item-img">
-                    <img src="images/project2.png" alt="">
-                </div>
-                <div class="all-works__item-title">название проекта 2</div>
+                <a href="#" class="all-works__item-link">
+                    <div  class="all-works__item-content">
+                        <img src="images/project2.png" alt="">
+                        <div class="all-works__item-layer">
+                            <img src="images/hoverlink.png" alt="">
+                        </div>
+                    </div>
+                    <div class="all-works__item-title">название проекта 2</div>
+                </a>
             </li>
             <li class="all-works__item">
-                <div class="all-works__item-img">
-                    <img src="images/project3.png" alt="">
-                </div>
-                <div class="all-works__item-title">название проекта 3</div>
+                <a href="#" class="all-works__item-link">
+                    <div  class="all-works__item-content">
+                        <img src="images/project3.png" alt="">
+                        <div class="all-works__item-layer">
+                            <img src="images/hoverlink.png" alt="">
+                        </div>
+                    </div>
+                    <div class="all-works__item-title">название проекта 3</div>
+                </a>
             </li>
         </div>
     </div>
