--- a/src/components/main-footer/main-footer.hbs
+++ b/src/components/main-footer/main-footer.hbs
@@ -6,9 +6,20 @@
         <div class="main-footer__content">
             <h2 class="h2 main-footer__title">Лучше 1 раз услышать</h2>
             <div class="h2_subtitle main-footer__description">чем 100 раз прочитать</div>
-            <button href="#about" class="button main-footer__button">
-                <span class="main-footer__button-title">познакомиться</span>
-            </button>
+            <div class="main-footer__callback-form">
+                <button href="#about" class="button main-footer__button">
+                    <img src="images/comment.png" alt="" class="main-footer__button-icon icon-one">
+                    <span class="main-footer__button-title">познакомиться</span>
+                </button>
+                <form action="#" class="main-footer__form">
+                    <input class="main-footer__form-input" type="text" name="email" autocomplete="off" placeholder="Ваша почта / skype">
+                    <button href="#about" class="button main-footer__button button-two">
+                        <img src="images/connect.png" alt="" class="main-footer__button-icon icon-two">
+                        <span class="main-footer__button-title">отправить</span>
+                    </button>
+                </form>
+            </div>
+
 
             <div class="main-footer__smm">
                 <div class="main-footer__smm-title">
