--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -12,15 +12,21 @@
   cursor: pointer;
   text-decoration: none;
   transition: $delay;
-  box-shadow: 3px 4px 8px rgba(0, 0, 0, 0.35);
   border-radius: 10px;
   border: 2px solid #121212;
   background-color: #ffffff;
+  box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.35);
 
   &:hover {
-    margin-top: 1px;
-    //background-color: darken(#ffffff, 10%);
-    box-shadow: 0 0 0;
+    box-shadow: 3px 4px 8px rgba(0, 0, 0, 0.35);
+    border-bottom-width: 3px;
+    margin-bottom: -1px;
+  }
+
+  &:active {
+    box-shadow: none;
+    border-bottom-width: 2px;
+    margin-bottom: 0;
   }
 
   &__icon{
