added slideUp/slideDown effect to .main-footer__form

--- a/src/components/main-footer/main-footer.hbs
+++ b/src/components/main-footer/main-footer.hbs
@@ -7,14 +7,14 @@
             <h2 class="h2 main-footer__title">Лучше 1 раз услышать</h2>
             <div class="h2_subtitle main-footer__description">чем 100 раз прочитать</div>
             <div class="main-footer__callback-form">
-                <button href="#about" class="button main-footer__button">
-                    <img src="images/comment.png" alt="" class="main-footer__button-icon icon-one">
+                <button class="button main-footer__button main-footer__button_one">
+                    <img src="images/comment.png" alt="" class="main-footer__button-icon main-footer__button-icon_one">
                     <span class="main-footer__button-title">познакомиться</span>
                 </button>
                 <form action="#" class="main-footer__form">
                     <input class="main-footer__form-input" type="text" name="email" autocomplete="off" placeholder="Ваша почта / skype">
-                    <button href="#about" class="button main-footer__button button-two">
-                        <img src="images/connect.png" alt="" class="main-footer__button-icon icon-two">
+                    <button class="button main-footer__button main-footer__button_two">
+                        <img src="images/connect.png" alt="" class="main-footer__button-icon main-footer__button-icon_two">
                         <span class="main-footer__button-title">отправить</span>
                     </button>
                 </form>
