Started to code checkboxes in .about-me

--- a/src/components/about/about.hbs
+++ b/src/components/about/about.hbs
@@ -1,87 +1,127 @@
-<div class="about">
+<div class="about" id="about">
     <div class="container about__container">
         <div class="about-work">
             <h2 class="h2 about__title">С чем работаю</h2>
             <div class="h2_subtitle about__description">языки, фреймворки, CMS</div>
             <ul class="about-work__list">
-                <li class="about-work__item">
-                    <div class="about-work__item-icon"></div>
-                    <div class="about-work__item-title">HTML 5</div>
+                <li class="checkbox about-work__item">
+                    <div class="checkbox">
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
+                        <label class="checkbox__icon" for="my-checkbox-1"></label>
+                        <label class="checkbox__label" for="my-checkbox-1">HTML 5</label>
+                    </div>
                     <div class="about-work__item-rating"></div>
                 </li>
-                <li class="about-work__item">
-                    <div class="about-work__item-icon"></div>
-                    <div class="about-work__item-title">СSS 3</div>
+                <li class="checkbox about-work__item">
+                    <div class="checkbox">
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
+                        <label class="checkbox__icon" for="my-checkbox-1"></label>
+                        <label class="checkbox__label" for="my-checkbox-1">CSS 3</label>
+                    </div>
                     <div class="about-work__item-rating"></div>
                 </li>
-                <li class="about-work__item">
-                    <div class="about-work__item-icon"></div>
-                    <div class="about-work__item-title">JavaScript</div>
+                <li class="checkbox about-work__item">
+                    <div class="checkbox">
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
+                        <label class="checkbox__icon" for="my-checkbox-1"></label>
+                        <label class="checkbox__label" for="my-checkbox-1">Javascript</label>
+                    </div>
                     <div class="about-work__item-rating"></div>
                 </li>
-                <li class="about-work__item">
-                    <div class="about-work__item-icon"></div>
-                    <div class="about-work__item-title">jQuery</div>
+                <li class="checkbox about-work__item">
+                    <div class="checkbox">
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
+                        <label class="checkbox__icon" for="my-checkbox-1"></label>
+                        <label class="checkbox__label" for="my-checkbox-1">jQuery</label>
+                    </div>
                     <div class="about-work__item-rating"></div>
                 </li>
-                <li class="about-work__item">
-                    <div class="about-work__item-icon"></div>
-                    <div class="about-work__item-title">JavaScript</div>
+                <li class="checkbox about-work__item">
+                    <div class="checkbox">
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
+                        <label class="checkbox__icon" for="my-checkbox-1"></label>
+                        <label class="checkbox__label" for="my-checkbox-1">AJAX</label>
+                    </div>
                     <div class="about-work__item-rating"></div>
                 </li>
-                <li class="about-work__item">
-                    <div class="about-work__item-icon"></div>
-                    <div class="about-work__item-title">AJAX</div>
+                <li class="checkbox about-work__item">
+                    <div class="checkbox">
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
+                        <label class="checkbox__icon" for="my-checkbox-1"></label>
+                        <label class="checkbox__label" for="my-checkbox-1">PHP</label>
+                    </div>
                     <div class="about-work__item-rating"></div>
                 </li>
-                <li class="about-work__item">
-                    <div class="about-work__item-icon"></div>
-                    <div class="about-work__item-title">PHP</div>
+                <li class="checkbox about-work__item">
+                    <div class="checkbox">
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
+                        <label class="checkbox__icon" for="my-checkbox-1"></label>
+                        <label class="checkbox__label" for="my-checkbox-1">SQL</label>
+                    </div>
                     <div class="about-work__item-rating"></div>
                 </li>
-                <li class="about-work__item">
-                    <div class="about-work__item-icon"></div>
-                    <div class="about-work__item-title">SQL</div>
+                <li class="checkbox about-work__item">
+                    <div class="checkbox">
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
+                        <label class="checkbox__icon" for="my-checkbox-1"></label>
+                        <label class="checkbox__label" for="my-checkbox-1">NET</label>
+                    </div>
                     <div class="about-work__item-rating"></div>
                 </li>
-                <li class="about-work__item">
-                    <div class="about-work__item-icon"></div>
-                    <div class="about-work__item-title">NET</div>
+                <li class="checkbox about-work__item">
+                    <div class="checkbox">
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
+                        <label class="checkbox__icon" for="my-checkbox-1"></label>
+                        <label class="checkbox__label" for="my-checkbox-1">RUBY</label>
+                    </div>
                     <div class="about-work__item-rating"></div>
                 </li>
-                <li class="about-work__item">
-                    <div class="about-work__item-icon"></div>
-                    <div class="about-work__item-title">RUBY</div>
+                <li class="checkbox about-work__item">
+                    <div class="checkbox">
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
+                        <label class="checkbox__icon" for="my-checkbox-1"></label>
+                        <label class="checkbox__label" for="my-checkbox-1">CMS Wordpress</label>
+                    </div>
                     <div class="about-work__item-rating"></div>
                 </li>
-                <li class="about-work__item">
-                    <div class="about-work__item-icon"></div>
-                    <div class="about-work__item-title">CMS WordPress</div>
+                <li class="checkbox about-work__item">
+                    <div class="checkbox">
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
+                        <label class="checkbox__icon" for="my-checkbox-1"></label>
+                        <label class="checkbox__label" for="my-checkbox-1">CMS Joomla</label>
+                    </div>
                     <div class="about-work__item-rating"></div>
                 </li>
-                <li class="about-work__item">
-                    <div class="about-work__item-icon"></div>
-                    <div class="about-work__item-title">CMS Joomla</div>
+                <li class="checkbox about-work__item">
+                    <div class="checkbox">
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
+                        <label class="checkbox__icon" for="my-checkbox-1"></label>
+                        <label class="checkbox__label" for="my-checkbox-1">CMS Opencart</label>
+                    </div>
                     <div class="about-work__item-rating"></div>
                 </li>
-                <li class="about-work__item">
-                    <div class="about-work__item-icon"></div>
-                    <div class="about-work__item-title">CMS OpenCart</div>
+                <li class="checkbox about-work__item">
+                    <div class="checkbox">
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
+                        <label class="checkbox__icon" for="my-checkbox-1"></label>
+                        <label class="checkbox__label" for="my-checkbox-1">CMS Simpla</label>
+                    </div>
                     <div class="about-work__item-rating"></div>
                 </li>
-                <li class="about-work__item">
-                    <div class="about-work__item-icon"></div>
-                    <div class="about-work__item-title">CMS Simpla</div>
+                <li class="checkbox about-work__item">
+                    <div class="checkbox">
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
+                        <label class="checkbox__icon" for="my-checkbox-1"></label>
+                        <label class="checkbox__label" for="my-checkbox-1">Android</label>
+                    </div>
                     <div class="about-work__item-rating"></div>
                 </li>
-                <li class="about-work__item">
-                    <div class="about-work__item-icon"></div>
-                    <div class="about-work__item-title">Android</div>
-                    <div class="about-work__item-rating"></div>
-                </li>
-                <li class="about-work__item">
-                    <div class="about-work__item-icon"></div>
-                    <div class="about-work__item-title">IOS</div>
+                <li class="checkbox about-work__item">
+                    <div class="checkbox">
+                        <input type="checkbox" class="checkbox__input" id="my-checkbox-1">
+                        <label class="checkbox__icon" for="my-checkbox-1"></label>
+                        <label class="checkbox__label" for="my-checkbox-1">IOS</label>
+                    </div>
                     <div class="about-work__item-rating"></div>
                 </li>
             </ul>
