--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,7 +1,10 @@
 @import './container/container';
 @import './button/button';
+@import './main-header/main-header';
 @import './main-banner/main-banner';
 @import './about/about';
 @import './one-work/one-work';
 @import './all-works/all-works';
 @import './main-footer/main-footer';
+@import './scroll-up/scroll-up';
+@import './menu-toggle/menu-toggle';
