--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -19,11 +19,76 @@
     }
   }
 
-  &__title {
-    text-align: center;
+  &-work {
+
+    &__list {
+      display: flex;
+      flex-direction: column;
+    }
+
+    &__item {
+      display: flex;
+    }
   }
 
-  &__description {
+}
+
+.checkbox {
+  margin-top: 5px;
+  display: inline-flex;
+  align-items: center;
+  overflow: hidden;
+
+  &__input {
+    display: none;
+
+    ~ .checkbox__icon {
+      position: relative;
+      display: block;
+      justify-content: center;
+      align-items: center;
+      width: 15px;
+      height: 15px;
+      border-radius: 50%;
+      margin-right: 2px;
+      background: #fff;
+      border: 1px solid #d2d2d2;
+      cursor: pointer;
+      transition: 0.2s;
+      overflow: hidden;
+
+      &:before {
+        content: '';
+        display: none;
+      }
+
+      svg{
+        font-size: 15px;
+        transition: 0.2s;
+        color: transparent;
+      }
+    }
+
+    &:checked ~ .checkbox__icon {
+      position: absolute;
+      width: 11px;
+      height: 11px;
+      background-color: #33b5e5;
+
+      .checkbox__label {
+        padding-left: 9px;
+      }
+    }
 
   }
+
+  &__icon label {
+    cursor: pointer;
+  }
+
+  &__label {
+    padding-left: 5px;
+    line-height: 1.2;
+  }
+
 }
