--- a/src/components/main-banner/main-banner.hbs
+++ b/src/components/main-banner/main-banner.hbs
@@ -1,4 +1,5 @@
 <div class="main-banner">
+    {{> main-header }}
     <div class="container main-banner__container">
         <div class="main-banner__content">
             <div class="main-banner__slogan">привет!<br>меня зовут <span class="blue">иванов иван</span></div>
