--- a/src/components/main-footer/main-footer.hbs
+++ b/src/components/main-footer/main-footer.hbs
@@ -1,4 +1,4 @@
-<footer class="main-footer">
+<footer class="main-footer" id="contact-us">
     <div class="container main-footer__top">
         <div class="main-footer__avatar">
             <img src="images/avatar.png" alt="">
