--- a/src/components/one-work/one-work.hbs
+++ b/src/components/one-work/one-work.hbs
@@ -5,5 +5,6 @@
         <div class="one-work__video">
             <img src="images/video.png" alt="">
         </div>
+        <img src="images/links.png" alt="">
     </div>
 </div>
